# PROJ_Q_YV35_Host_Update_Tool

./: CMakeLists.txt  README.md  main.c
freeipmi-1.6.9/libfreeipmi/driver/: ipmi-kcs-driver.c
include/: config.h
src/: main.c
